--- a/resources/views/home.antlers.html
+++ b/resources/views/home.antlers.html
@@ -15,3 +15,5 @@
 <article class="mt-4 bg-white p-8 shadow-xl rounded-xl max-w-xl prose">
     {{ content | widont }}
 </article>
+
+<img src="{{ glide:image }}" /
